<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arkiv</string>
    <string name="buttonCategory1">Certificate</string>
    <string name="buttonCategory2">Holiday</string>
    <string name="buttonCategory3">Receipt</string>
    <string name="buttonCategory4">Invoice</string>
    <string name="buttonCategory5">Ad</string>
    <string name="buttonCategory6">Other</string>
    <string name="buttonLog">Archive</string>
    <string name="category1">Certificate</string>
    <string name="category2">Holiday</string>
    <string name="category3">Receipt</string>
    <string name="category4">Invoice</string>
    <string name="category5">Ad</string>
    <string name="category6">Other</string>
    <string name="rootPath">/sdcard/Arkiv/</string>
    <string name="folderIntyg">/sdcard/Arkiv/Certificate</string>
    <string name="folderLedighet">/sdcard/Arkiv/Holiday</string>
    <string name="folderKvitto">/sdcard/Arkiv/Receipt</string>
    <string name="folderFaktura">/sdcard/Arkiv/Invoice</string>
    <string name="folderAd">/sdcard/Arkiv/Ads</string>
    <string name="folderOther">/sdcard/Arkiv/Other</string>
    <string name="intyg">Certificate</string>
    <string name="emailBody">Detta mail är skickat från Androidapplikationen Arkiv så att innehållet kan lagras.</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuHelp">Help</string>
    <string name="menuAbout">About</string>
    <string name="aboutTitle">About Arkiv</string>
    <string name="aboutText">Arkiv was created by Erik Jonsson 2012.</string>
    <string name="helpTitle">Help</string>
    <string name="helpText">Arkiv is an Android app which can help you save important documents electronically. Aim your mobiles camera towards the document you want to save and push the button for the appropriate category. An image of the document is then saved on the SD-card in the folder Arkiv which has sub-folders for each category. If an email address is specified in Preferences then the image can also be sent in an email as an attachment. </string>
    <string name="preferenceCategoryEmail">Email preferences</string>
    <string name="preferenceEmailAddress">Email address</string>
    <string name="preferenceSendEmail">Send email</string>
    <string name="preferenceCategoryScreen">Screen preferences</string>
    <string name="preferenceStatusBar">Show status bar</string>
    <string name="preferenceButtonsOnTop">Buttons on top</string>
    <string name="preferenceCategoryCategories">Categories preferences</string>
    <string name="preferenceSubCategories">Use sub-categories</string>
    <string name="settingsTitle">Preferences</string>
    <string name="chooserTitle">Choose program</string>
    <string name="noFocus">Unable to focus camera!</string>
    <string name="sendTitle">Select category for your image.</string>
    <string name="subCategoryTitle">Subcategory</string>
    <string name="subCategoryText">Select a subcategory or specify a new.</string>
    <string name="addSubCategoryText">New subcategory</string>
    <string name="previewDescription">Preview</string>
    <string name="unableToSaveImage">Unable to save picture on SD-card.</string>
    <string name="contextMenuTitle">Context Menu</string>
	<string name="menuRename">Rename</string>
	<string name="renameText">Enter a new name</string>
	<string name="menuOpen">Open</string>
</resources>