<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/preferenceCategoryEmail">
        <EditTextPreference
            android:key="PREF_EMAIL_ADDRESS" 
            android:title="@string/preferenceEmailAddress" />
        <CheckBoxPreference
            android:key="PREF_SEND_MAIL" 
            android:title="@string/preferenceSendEmail"
        	android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategoryScreen">
        <CheckBoxPreference
            android:key="PREF_STATUS_BAR" 
            android:title="@string/preferenceStatusBar" 
            android:defaultValue="true" />
        <!--  
        <CheckBoxPreference
            android:key="PREF_BUTTONS_ON_TOP" 
            android:title="@string/preferenceButtonsOnTop"
        	android:defaultValue="true" />
        -->
    </PreferenceCategory>
    <!-- 
    <PreferenceCategory android:title="@string/preferenceCategoryCategories">
        <CheckBoxPreference
            android:key="PREF_USE_SUBCATEGORIES" 
            android:title="@string/preferenceSubCategories" 
            android:defaultValue="false" />
    </PreferenceCategory>
    -->
</PreferenceScreen>